fix the bug that pagemenu overlaps headers right below it
its implicit height is too much, setting it explicitly could fix this.

see #19307

--- a/share/html/NoAuth/css/aileron/nav.css
+++ b/share/html/NoAuth/css/aileron/nav.css
@@ -115,6 +115,7 @@
     left: auto;
     z-index: 9995;
     font-size: 0.9em;
+    height: 2.5em;
 }
 
 #page-navigation .sf-menu li, #page-navigation .sf-menu li li, #page-navigation .sf-menu li li li {
